--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,28 +14,49 @@
   </ion-header>
   
   <ion-content padding>
-  
-    <!-- Default Searchbar -->
-    <ion-searchbar [(ngModel)]="myInput" [showCancelButton]="showCancelButton" (ionInput)="onInput($event)" (ionCancel)="onCancel($event)">
-    </ion-searchbar>
-      <ion-list>
-        <ion-item *ngFor="let item of items">
-          {{item}}
-        </ion-item>
-      </ion-list>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title>Card Title</ion-card-title>
+      </ion-card-header>
     
-  
-    <ion-slides pager="true">
-      <ion-slide>
-        <h1>Slide 1</h1>
-      </ion-slide>
-  
-      <ion-slide>
-        <h1>Slide 2</h1>
-      </ion-slide>
-  
-      <ion-slide>
-        <h1>Slide 3</h1>
-      </ion-slide>
-    </ion-slides>
+      <ion-card-content>
+        Keep close to Nature's heart... and break clear away, once in awhile,
+        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title>Card Title</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Keep close to Nature's heart... and break clear away, once in awhile,
+        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title>Card Title</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Keep close to Nature's heart... and break clear away, once in awhile,
+        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title>Card Title</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Keep close to Nature's heart... and break clear away, once in awhile,
+        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      </ion-card-content>
+    </ion-card>
   </ion-content>
