--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,14 @@
       </ion-header>
 
       <ion-content padding>
-        
+        <ion-list>
+          <ion-menu-toggle *ngFor="let p of appPage">
+            <ion-item>
+              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+              <ion-label></ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
       </ion-content>
     </ion-menu>
     <ion-router-outlet main></ion-router-outlet>
