--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -17,19 +17,14 @@
       <ion-label>Home .1</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="about" href="/tabs/(about:about)">
-      <ion-icon name="information-circle"></ion-icon>
-      <ion-label>About2</ion-label>
+    <ion-tab-button tab="Maps" href="/tabs/(Maps:Maps)">
+      <ion-icon name="md-map"></ion-icon>
+      <ion-label>Maps</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="contact" href="/tabs/(contact:contact)">
-      <ion-icon name="contacts"></ion-icon>
-      <ion-label>Contact3</ion-label>
+    <ion-tab-button tab="Status" href="/tabs/(Status:Status)">
+      <ion-icon name="Status"></ion-icon>
+      <ion-label>Status</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="contact" href="/tabs/(contact:contact)">
-      <ion-icon name="contacts"></ion-icon>
-      <ion-label>Contact</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
 
 </ion-tabs>
