--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,10 @@
 
       <ion-content padding>
         <ion-list>
-          <ion-menu-toggle *ngFor="let p of appPage">
-            <ion-item>
+          <ion-menu-toggle *ngFor="let p of appPages">
+            <ion-item [routerLink]="p.url" [routerDirection]="'root'"> 
               <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label></ion-label>
+              <ion-label>{{p.title}}</ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
