--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs >
 
   <ion-tab tab="home">
     <ion-router-outlet name="home"></ion-router-outlet>
@@ -14,22 +14,19 @@
 
     <ion-tab-button tab="home" href="/tabs/(home:home)">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Home .1</ion-label>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="about" href="/tabs/(about:about)">
       <ion-icon name="information-circle"></ion-icon>
-      <ion-label>About2</ion-label>
+      <ion-label>About</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="contact" href="/tabs/(contact:contact)">
       <ion-icon name="contacts"></ion-icon>
-      <ion-label>Contact3</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="contact" href="/tabs/(contact:contact)">
-      <ion-icon name="contacts"></ion-icon>
       <ion-label>Contact</ion-label>
     </ion-tab-button>
+    
   </ion-tab-bar>
 
 </ion-tabs>
