--- a/src/app/Maps/Maps.page.html
+++ b/src/app/Maps/Maps.page.html
@@ -8,5 +8,7 @@
     <ion-title>About</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<agm-map [latitude]="lat" [longitude]="lng">
+  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+</agm-map>
 <ion-content></ion-content>
