--- a/src/app/Status/Status.page.html
+++ b/src/app/Status/Status.page.html
@@ -6,7 +6,7 @@
           </ion-menu-button>
         </ion-buttons>
     <ion-title>
-      Contact
+      Status
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,13 +15,13 @@
   <ion-list>
     <ion-list-header>
       <ion-label>
-        Follow us on Twitter
+        
       </ion-label>
     </ion-list-header>
     <ion-item>
       <ion-label>
-        <ion-icon name="logo-ionic" slot="start"></ion-icon>
-        @ionicframework
+        
+        
       </ion-label>
     </ion-item>
   </ion-list>
