--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -23,8 +23,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="Status" href="/tabs/(Status:Status)">
-      <ion-icon name="Status"></ion-icon>
+      <ion-icon name="time"></ion-icon>
       <ion-label>Status</ion-label>
     </ion-tab-button>
-
+</ion-tab-bar>
 </ion-tabs>
