--- a/src/app/Maps/Maps.page.html
+++ b/src/app/Maps/Maps.page.html
@@ -5,7 +5,7 @@
     
           </ion-menu-button>
         </ion-buttons>
-    <ion-title>About</ion-title>
+    <ion-title>Maps</ion-title>
   </ion-toolbar>
 </ion-header>
 <agm-map [latitude]="lat" [longitude]="lng">
