--- a/src/app/seach/seach.page.html
+++ b/src/app/seach/seach.page.html
@@ -17,7 +17,13 @@
 
   <ion-list>
     <ion-item *ngFor="let item of items">
-      {{ item }}
+
+      <ion-card (click)="pushPage()">
+        <ion-card-header>
+          <ion-card-title>{{ item }}</ion-card-title>
+        </ion-card-header>
+      </ion-card>
+      
     </ion-item>
   </ion-list>
 
