--- a/src/app/Status/Status.page.html
+++ b/src/app/Status/Status.page.html
@@ -12,17 +12,16 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>
-      <ion-label>
-        
-      </ion-label>
-    </ion-list-header>
+  <ion-card>
     <ion-item>
-      <ion-label>
-        
-        
-      </ion-label>
+      <ion-icon name="pin" slot="start"></ion-icon>
+      <ion-label>ion-item in a card, icon left, button right</ion-label>
+      <ion-button fill="outline" slot="end">View</ion-button>
     </ion-item>
-  </ion-list>
+  
+    <ion-card-content>
+      This is content, without any paragraph or header tags,
+      within an ion-card-content element.
+    </ion-card-content>
+  </ion-card>
 </ion-content>
