--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs >
+<ion-tabs color="danger">
 
   <ion-tab tab="home">
     <ion-router-outlet name="home"></ion-router-outlet>
@@ -18,7 +18,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="Maps" href="/tabs/(Maps:Maps)">
-      <ion-icon name="md-map"></ion-icon>
+      <ion-icon name="md-map" ></ion-icon>
       <ion-label>Maps</ion-label>
     </ion-tab-button>
 
